create hikes and add best month migrations

--- a/app/views/hikes/index.html.erb
+++ b/app/views/hikes/index.html.erb
@@ -10,6 +10,7 @@
     <li>Elevation Gain: <%= hike[:elevation_gain_feet]%> feet</li>
     <li>Max Elevation: <%= hike[:max_elevation_feet]%> feet</li>
     <li>Rating: <%= hike[:rating]%> miles</li>
+    <li>Best Month: <%= hike[:best_month]%> </li>
     </ul>
   </li>
 </ul>
