updated view to hike.name

--- a/app/views/hikes/index.html.erb
+++ b/app/views/hikes/index.html.erb
@@ -4,7 +4,7 @@
 
 <ul>
   <li>
-  <strong>Name: </strong><%= hike[:name] %>, 
+  <strong>Name: </strong><%= hike.name %>, 
     <ul>
     <li>Length: <%= hike[:length_miles]%> miles</li>
     <li>Elevation Gain: <%= hike[:elevation_gain_feet]%> feet</li>
