--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,11 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
+  <Header> Becca's Hike Finder </Header>
   <body>
     <%= yield %>
   </body>
+  <footer>
+  <%= link_to "Hikes List", hikes_path%>
+  </footer>
 </html>
